force-app/main/default/objects/Campaign/fields/Campaign_Code_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Code_Auto_Number__c</fullName>
    <displayFormat>MKT-{YYYY}-{000000}</displayFormat>
    <label>Campaign Code Auto Number</label>
    <type>AutoNumber</type>
</CustomField>