force-app/main/default/objects/Campaign/fields/Campaign_ID_Read__c.field-meta.xml
<CustomField>
    <fullName>Campaign_ID_Read__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign ID(Read)</label>
    <type>Text</type>
</CustomField>