force-app/main/default/objects/Campaign/fields/CampKEY__c.field-meta.xml
<CustomField>
    <fullName>CampKEY__c</fullName>
    <displayFormat>CID{0000}</displayFormat>
    <label>CampKEY</label>
    <type>AutoNumber</type>
</CustomField>