force-app/main/default/objects/Campaign/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Newsletter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>