force-app/main/default/objects/Campaign/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Engagement__c.Stage__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filterItems>
        <infoMessage>Closed engagements shown by default.  &quot;Show All Results&quot; will display all matching engagements.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>