force-app/main/default/objects/Campaign/fields/Event_Location__c.field-meta.xml
<CustomField>
    <fullName>Event_Location__c</fullName>
    <label>Event Location</label>
    <type>TextArea</type>
</CustomField>