force-app/main/default/objects/Campaign/fields/Expected_Results__c.field-meta.xml
<CustomField>
    <fullName>Expected_Results__c</fullName>
    <label>Expected Results</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>