force-app/main/default/objects/Campaign/fields/Expected_Results_Rate__c.field-meta.xml
<CustomField>
    <fullName>Expected_Results_Rate__c</fullName>
    <formula>Expected_Results__c /  NumberOfContacts</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Results Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>