force-app/main/default/objects/Campaign/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <label>Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADG</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>BIG</fullName>
            </value>
            <value>
                <fullName>FVA</fullName>
            </value>
            <value>
                <fullName>CAPITAL</fullName>
            </value>
            <value>
                <fullName>All Products</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>FRG</fullName>
            </value>
            <value>
                <fullName>Private Equity</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Consumer Products</fullName>
            </value>
            <value>
                <fullName>Article</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Seminar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>