force-app/main/default/objects/Campaign/fields/GWCC__Unconverted_Leads__c.field-meta.xml
<CustomField>
    <fullName>GWCC__Unconverted_Leads__c</fullName>
    <formula>NumberOfLeads - NumberOfConvertedLeads</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Leads that have not been converted into contacts.</inlineHelpText>
    <label>Open Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>