force-app/main/default/objects/Campaign/fields/HL_Sub_Group__c.field-meta.xml
<CustomField>
    <fullName>HL_Sub_Group__c</fullName>
    <label>HL Sub-Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>CM</fullName>
            </value>
            <value>
                <fullName>FS</fullName>
            </value>
            <value>
                <fullName>HF</fullName>
            </value>
            <value>
                <fullName>IFA</fullName>
            </value>
            <value>
                <fullName>M&amp;A</fullName>
            </value>
            <value>
                <fullName>PE</fullName>
            </value>
            <value>
                <fullName>TAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>