force-app/main/default/objects/Campaign/fields/Industry_Groups__c.field-meta.xml
<CustomField>
    <fullName>Industry_Groups__c</fullName>
    <label>Industry Groups</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADG</fullName>
            </value>
            <value>
                <fullName>BUS</fullName>
            </value>
            <value>
                <fullName>CFR</fullName>
            </value>
            <value>
                <fullName>FIG</fullName>
            </value>
            <value>
                <fullName>HC</fullName>
            </value>
            <value>
                <fullName>IG</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>O&amp;G</fullName>
            </value>
            <value>
                <fullName>POW</fullName>
            </value>
            <value>
                <fullName>RE</fullName>
            </value>
            <value>
                <fullName>SOV</fullName>
            </value>
            <value>
                <fullName>TECH</fullName>
            </value>
            <value>
                <fullName>TRANS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>