force-app/main/default/objects/Campaign/fields/Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Launch_Date__c</fullName>
    <description>Applies to all campaigns but conferences/events</description>
    <label>Launch Date</label>
    <type>Date</type>
</CustomField>