force-app/main/default/objects/Campaign/fields/Lines_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Lines_of_Business__c</fullName>
    <label>Lines of Business</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CF</fullName>
            </value>
            <value>
                <fullName>FVA</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>