force-app/main/default/objects/Campaign/fields/Mailing_Code__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Code__c</fullName>
    <label>Mailing Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>