force-app/main/default/objects/Campaign/fields/Marketing_Channel__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Channel__c</fullName>
    <label>Marketing Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Print Mail</fullName>
            </value>
            <value>
                <fullName>Print Ad</fullName>
            </value>
            <value>
                <fullName>Online Ad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>