force-app/main/default/objects/Campaign/fields/MC_Number__c.field-meta.xml
<CustomField>
    <fullName>MC_Number__c</fullName>
    <inlineHelpText>Marketing Central Number</inlineHelpText>
    <label>MC Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>