force-app/main/default/objects/Campaign/fields/Message_Type__c.field-meta.xml
<CustomField>
    <fullName>Message_Type__c</fullName>
    <label>Message Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Save the Date</fullName>
            </value>
            <value>
                <fullName>Invitation</fullName>
            </value>
            <value>
                <fullName>Confirmation</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Last Chance to Register</fullName>
            </value>
            <value>
                <fullName>Reminder</fullName>
            </value>
            <value>
                <fullName>Thank You</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>