force-app/main/default/objects/Campaign/fields/Milestone_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Checklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Milestone Checklist</label>
    <type>Checkbox</type>
</CustomField>