force-app/main/default/objects/Campaign/fields/Number_of_Failures__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Failures__c</fullName>
    <label># of Failures</label>
    <summaryFilterItems>
        <field>CampaignMember.Status</field>
        <operation>equals</operation>
        <value>Failure</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>