force-app/main/default/objects/Campaign/fields/Number_of_Unsubscribed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Unsubscribed__c</fullName>
    <label># of Unsubscribed</label>
    <summaryFilterItems>
        <field>CampaignMember.Status</field>
        <operation>equals</operation>
        <value>Unsubscribed</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>