force-app/main/default/objects/Campaign/fields/Objectives__c.field-meta.xml
<CustomField>
    <fullName>Objectives__c</fullName>
    <label>Objectives</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>