force-app/main/default/objects/Campaign/fields/of_Attendees__c.field-meta.xml
<CustomField>
    <fullName>of_Attendees__c</fullName>
    <inlineHelpText>Status = Attended + Walk Ins</inlineHelpText>
    <label># of Attendees</label>
    <summaryFilterItems>
        <field>CampaignMember.Status</field>
        <operation>equals</operation>
        <value>Attended, Walk - In</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>