force-app/main/default/objects/Campaign/fields/of_Clicked_MANUAL__c.field-meta.xml
<CustomField>
    <fullName>of_Clicked_MANUAL__c</fullName>
    <label># of Clicked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>