force-app/main/default/objects/Campaign/fields/of_Opens_MANUAL__c.field-meta.xml
<CustomField>
    <fullName>of_Opens_MANUAL__c</fullName>
    <label># of Opens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>