force-app/main/default/objects/Campaign/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <description>Eventually, want to replace this with a lookup that allows selection of multiple HL employees</description>
    <label>Project Manager</label>
    <type>TextArea</type>
</CustomField>