force-app/main/default/objects/Campaign/fields/Response_Percent__c.field-meta.xml
<CustomField>
    <fullName>Response_Percent__c</fullName>
    <formula>NumberOfResponses  /  NumberOfContacts</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Response Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>