force-app/main/default/objects/Campaign/fields/Seed_1__c.field-meta.xml
<CustomField>
    <fullName>Seed_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seed 1</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select a Houlihan Lokey employee contact.</errorMessage>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Houlihan Employee</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Campaigns (Seed 1)</relationshipLabel>
    <relationshipName>Campaign_Seed1</relationshipName>
    <type>Lookup</type>
</CustomField>