force-app/main/default/objects/Campaign/fields/Seeds__c.field-meta.xml
<CustomField>
    <fullName>Seeds__c</fullName>
    <label>Seeds</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>