force-app/main/default/objects/Campaign/fields/Target_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Target_Attendance__c</fullName>
    <label>Target Attendance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>