force-app/main/default/objects/Campaign/fields/Target_Audience__c.field-meta.xml
<CustomField>
    <fullName>Target_Audience__c</fullName>
    <inlineHelpText>Describe event contact/company types</inlineHelpText>
    <label>Target Audience</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>