force-app/main/default/objects/Campaign/recordTypes/Conference_Event.recordType-meta.xml
<RecordType>
    <fullName>Conference_Event</fullName>
    <active>true</active>
    <description>Events and conferences sponsored/ co-sponsored by Houlihan Lokey (incl. webinars &amp; workshops)</description>
    <label>Conference / Event</label>
</RecordType>