force-app/main/default/objects/Campaign/recordTypes/Contact_List.recordType-meta.xml
<RecordType>
    <fullName>Contact_List</fullName>
    <active>true</active>
    <description>Contact List for Counterparty Contacts</description>
    <label>Contact List</label>
</RecordType>