force-app/main/default/objects/Campaign/recordTypes/Deal_Announcements.recordType-meta.xml
<RecordType>
    <fullName>Deal_Announcements</fullName>
    <active>true</active>
    <description>Used for all types of deal related announcements</description>
    <label>Deal Announcements</label>
</RecordType>