force-app/main/default/objects/Campaign/recordTypes/Firm_Announcements.recordType-meta.xml
<RecordType>
    <fullName>Firm_Announcements</fullName>
    <active>true</active>
    <description>Includes updates and announcements about Houlihan Lokey (ex. new hires or office move)</description>
    <label>Firm Announcements</label>
</RecordType>