force-app/main/default/objects/Campaign/recordTypes/Insights_Content.recordType-meta.xml
<RecordType>
    <fullName>Insights_Content</fullName>
    <active>true</active>
    <description>Distribution of content related materials (ex. whitepaper or  study)</description>
    <label>Insights / Content</label>
</RecordType>