force-app/main/default/objects/Campaign/listViews/Deal_Announcements.listView-meta.xml
<ListView>
    <fullName>Deal_Announcements</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>MC_Number__c</columns>
    <columns>Launch_Date__c</columns>
    <columns>Lines_of_Business__c</columns>
    <columns>Industry_Groups__c</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.NUM_SENT</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Deal_Announcements</value>
    </filters>
    <label>Deal Announcements</label>
</ListView>