force-app/main/default/objects/Campaign/listViews/Events.listView-meta.xml
<ListView>
    <fullName>Events</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Lines_of_Business__c</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>HL_Sub_Group__c</columns>
    <columns>Industry_Groups__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Parent_Campaign</value>
    </filters>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>contains</operation>
        <value>event</value>
    </filters>
    <label>Events</label>
</ListView>