force-app/main/default/objects/Campaign/listViews/Fighting_Chance_Charity_Gold_Outing1.listView-meta.xml
<ListView>
    <fullName>Fighting_Chance_Charity_Gold_Outing1</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <label>Fighting Chance Charity Gold Outing</label>
</ListView>