force-app/main/default/objects/Campaign/listViews/Firm_Announcements.listView-meta.xml
<ListView>
    <fullName>Firm_Announcements</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>MC_Number__c</columns>
    <columns>Launch_Date__c</columns>
    <columns>Target_Audience__c</columns>
    <columns>Lines_of_Business__c</columns>
    <columns>Industry_Groups__c</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PARENT_NAME</field>
        <operation>contains</operation>
        <value>Firm Announcement</value>
    </filters>
    <label>Firm Announcements</label>
</ListView>