force-app/main/default/objects/Campaign/listViews/Insights_Content.listView-meta.xml
<ListView>
    <fullName>Insights_Content</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Launch_Date__c</columns>
    <columns>CAMPAIGN.NUM_SENT</columns>
    <columns>Lines_of_Business__c</columns>
    <columns>Industry_Groups__c</columns>
    <columns>HL_Sub_Group__c</columns>
    <columns>CAMPAIGN.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Insights_Content</value>
    </filters>
    <label>Insights/Content</label>
</ListView>