force-app/main/default/objects/Campaign/listViews/Mailing_Subscriptions.listView-meta.xml
<ListView>
    <fullName>Mailing_Subscriptions</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>Lines_of_Business__c</columns>
    <columns>Industry_Groups__c</columns>
    <columns>HL_Sub_Group__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>contains</operation>
        <value>list</value>
    </filters>
    <filters>
        <field>Mailing_List__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Mailing Lists</label>
</ListView>